--- a/seminarski.bib
+++ b/seminarski.bib
@@ -55,3 +55,20 @@ year = {2004}
     title = {{AN INTRODUCTION TO FUNCTIONAL PROGRAMMING THROUGH LAMBDA CALCULUS}},
     year = {2011}
 }
+
+@article{survey,    
+    author = {Sofge, D. A.},
+    booktitle = {Quantum, Nano and Micro Technologies, 2008 Second International Conference on},
+    citeulike-article-id = {9675655},    
+    doi = {10.1109/icqnm.2008.15},
+    isbn = {978-0-7695-3085-7},
+    keywords = {computing, quantum},
+    month = feb,
+    pages = {66--71},
+    posted-at = {2011-08-17 07:10:28},
+    priority = {4},
+    publisher = {IEEE},
+    title = {{A Survey of Quantum Programming Languages: History, Methods, and Tools}},
+    url = {http://dx.doi.org/10.1109/icqnm.2008.15},
+    year = {2008}
+}
