--- a/seminarski.bib
+++ b/seminarski.bib
@@ -25,10 +25,10 @@ year = {1996}
 
 @book{knjiga,    
     author = {Nielsen, Michael A. and Chuang, Isaac L.},
-    isbn = {0521635039},
+    isbn = {9781107002173},
     publisher = {Cambridge University Press},
-    title = {{Quantum Computation and Quantum Information}},
-    year = {2002}
+    title = {{Quantum Computation and Quantum Information: 10th Anniversary Edition}},
+    year = {2010}
 }
 
 @article{qfc,
