--- a/Seminarski.tex
+++ b/Seminarski.tex
@@ -54,13 +54,11 @@ Za razumevanje kvantnog računarstva potrebni su nam osnovni pojmovi od kojih ne
 Kubit je najmanja jedinica izračunavanja u kvantnom računarstvu. Pandan je jednom bitu informacija u klasičnom računarstvu, ali dok se jedan bit može naći u 2 diskretna stanja (0, 1),
 kubit, na osnovu kvantnog principa superpozicije može istovremeno biti u više stanja.
 Tačnije, stanje kubita, u odsustvu merenja, može biti bilo koja linearna kombinacija osnovnih stanja.
-Za osnovna stanja (eng. ~\em base states) kubita se uzimaju ona koja pri merenju prelaze u stanje 0 ili 1 sa verovatnoćom 1 i obeležavaju se sa $\ket{1}$ i $\ket{0}$.
+Za osnovna stanja (eng. ~\emph{base states}) kubita se uzimaju ona koja pri merenju prelaze u stanje 0 ili 1 sa verovatnoćom 1 i obeležavaju se sa $\ket{1}$ i $\ket{0}$.
 
-Formalno, stanje kubita se zapisuje kao $\alpha \ket{0} + \beta \ket{1}$ gde su $\alpha$ i $\beta$ \em{kompleksni} parametri koji označavaju verovatnoću da se nakon merenja (očitavanja stanja) kubit nađe u jednom od osnovnih stanja sa verovatnoćama, redom, $\alpha^2$ i $\beta^2$ i važi $\alpha^2+\beta^2=1$.
+Formalno, stanje kubita se zapisuje kao $\alpha \ket{0} + \beta \ket{1}$ gde su $\alpha$ i $\beta$ \emph{kompleksni} parametri koji označavaju verovatnoću da se nakon merenja (očitavanja stanja) kubit nađe u jednom od osnovnih stanja sa verovatnoćama, redom, $\alpha^2$ i $\beta^2$ i važi $\alpha^2+\beta^2=1$.
 
-Ovo svojstvo ima za posledicu da se 2 kubita mogu naći istovremeno u 4 različita stanja i generalno, n kubita može odjednom biti u $2^n$ različitih stanja.
-
-Skup kubita uzetih zajedno naziva se kvantni registar (eng.~\emph{quantum register}).
+Ovo svojstvo ima za posledicu da se 2 kubita mogu naći istovremeno u 4 različita stanja i generalno, n kubita može odjednom biti u $2^n$ različitih stanja. Skup kubita uzetih zajedno naziva se kvantni registar (eng.~\emph{quantum register}).
 
 \subsubsection{Zapletenost, kombinovanje kubita, kvantni paralelizam}
 \label{entanglement}
@@ -93,7 +91,7 @@ Posebno su nam, kao i u klasičnom računarstvu, zanimljive male kvantne logičk
 $H\equiv\frac{1}{\sqrt{2}}\begin{pmatrix}
 1&1\\
 -1&1
-\end{pmatrix}$\\
+\end{pmatrix}$ \cite[Ch. 1.3.1]{knjiga}\\
 \smallskip
 koja radi nad jednim kubitom na sledeći način:\\
 \smallskip
@@ -122,7 +120,7 @@ Praktična konstrukcija kvantnog računara je još uvek u domenu laboratorijskih
 
 Za potrebe kvantnog računarstva, sisteme predstavljamo različitim idealizovanim modelima kao što su npr kvantna Turingova mašina (eng.~\emph{quantum Turing machine, QTM}) ili kvantno kolo (eng. ~\emph{quantum circuit}) dok zanemarujemo prisustvo greške i efekte smetnji (eng.~\emph{interference}) i dekoherencije koji su realnost kvantnih računara.
 
-Neki od opisanih funkcionalnih jezika (Quipper, ?) rade na modelu kvantne memorije sa nasumičnim pristupom (eng.~\emph{Quantum Random Access Memory, Quantum RAM, QRAM} opisan u \cite{qram_model}
+Neki od opisanih funkcionalnih jezika (Quipper, ?) rade na modelu kvantne memorije sa nasumičnim pristupom (eng.~\emph{Quantum Random Access Memory, Quantum RAM, QRAM} opisan u \cite{qram_model}.
 
 Kvantni računar je zamišljen kao koprocesor povezan sa klasičnim računarom na kome se izvršava kontrola toka. Kvantni uređaj sadrži fiksni unapred određeni broj kubita i sposoban je da ih individualno adresira. Na kvantnom računaru se izvršavaju samo 2 tipa operacija, unitarne operacije i merenja.  Smatra se da je određen broj osnovnih unitarnih operacija realizovan kroz ugrađenje kvantne kapije i da su one oblika ''Primeni ugrađenu operaciju na određene kubite''. Ove operacije vraćaju potvrdu kvantnog računara o izvršenju ali ne i bilo kakvu drugu informaciju.
 
@@ -158,7 +156,7 @@ QFC ( \emph{eng}. Quantum Flow Charts) i QPL ( \emph{eng}. Quantum Programming L
 
 Program se predstavlja u obliku grafikona protoka odn. dijagrama kontrole protoka. Komande deluju tako što ulaz transformišu u izlaz. Zarad jednostavnosti razmatramo samo jedan tip podataka: kubit. Ako nije drugačije naglašeno, tok podataka se odvija od vrha prema dnu. Svaka grana je označena kubitovima koji su dostupni u tom delu programa dok se u čvorovima odvijaju operacije nad njima. Unitarne transformacije mogu da deluju na jedan ili više kubitova; npr. pišemo \textit{q*=S} za operaciju primene neke kvantne logičke kapije na kubit q. Dakle, notacija je analogna notaciji \textit{b:=1} u klasičnom računarstvu. Operacija merenja je granajuća jer može imati dva moguća izlaza.
 \begin{figure}[H]
-\caption{Primer jednostavnog programa napisanog u QFC} \label{fig:qfcPrimer}
+\caption{Primer jednostavnog programa napisanog u QFC} 
 \centering
 \includegraphics[scale=0.75]{qFlow}
 \label{fig:qfcPrimer}
@@ -241,7 +239,7 @@ box
 Quipper je realizovan kao ~\em embedded ~\em language u okviru funkcionalnog jezika Haskell sa dodatnim bibliotekama. Aktuelna distribucija sadrži i simulator kvantnog računara i kod pisan u quipperu se može, naravno neefikasno, izvršiti i na klasičnim računarima.
 
 U Quipperu, isti opis kvantnog kola se može koristiti za konstrukciju i manipulaciju u memoriji ili za njegovo izvršenje. Na primer, funkcija \begin{verbatim} print_generic \end{verbatim} štampa kolo u nekom od izlaznih formata. Jednostavan program u propratnoj datoteci ''primer1.hs'' demonstrira prikaz konstruisanog kola u pdf formatu.\\
-Funkcija \begin{verbatim} run_generic \end{verbatim} simulira konstruisano.
+Funkcija \begin{verbatim} run_generic \end{verbatim} (neefikasno) simulira konstruisano kolo na klasičnom računaru. 
 
 \section{Zaključak}
 \label{sec:zakljucak}
